@@ -6,6 +6,7 @@ import com.manev.quislisting.domain.User;
 import com.manev.quislisting.domain.post.AbstractPost;
 import com.manev.quislisting.domain.post.discriminator.DlListing;
 import com.manev.quislisting.domain.post.discriminator.QlPage;
+import com.manev.quislisting.exception.MissingConfigurationException;
 import com.manev.quislisting.repository.QlConfigRepository;
 import com.manev.quislisting.repository.UserRepository;
 import com.manev.quislisting.repository.post.PostRepository;
@@ -14,6 +15,7 @@ import com.manev.quislisting.repository.qlml.LanguageTranslationRepository;
 import com.manev.quislisting.repository.taxonomy.NavMenuRepository;
 import com.manev.quislisting.security.SecurityUtils;
 import com.manev.quislisting.service.UserService;
+import org.apache.commons.lang3.CharEncoding;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Controller;
@@ -25,7 +27,6 @@ import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.servlet.LocaleResolver;
 
 import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
@@ -36,9 +37,9 @@ import java.util.Optional;
 @Controller
 public class PostController extends BaseController {
 
+    private static final String REDIRECT = "redirect:/";
     private final Logger log = LoggerFactory.getLogger(PostController.class);
     private final UserService userService;
-    private PostRepository<AbstractPost> postRepository;
     private final UserRepository userRepository;
 
     public PostController(NavMenuRepository navMenuRepository, QlConfigRepository qlConfigRepository,
@@ -47,15 +48,12 @@ public class PostController extends BaseController {
                           LanguageTranslationRepository languageTranslationRepository, UserService userService, UserRepository userRepository) {
         super(navMenuRepository, qlConfigRepository, languageRepository, languageTranslationRepository, localeResolver,
                 postRepository);
-        this.postRepository = postRepository;
         this.userService = userService;
         this.userRepository = userRepository;
     }
 
-
     @RequestMapping(value = "/{name}", method = RequestMethod.GET)
-    public String showPost(@PathVariable String name, final ModelMap modelMap, HttpServletRequest request,
-                           HttpServletResponse response) throws IOException {
+    public String showPost(@PathVariable String name, final ModelMap modelMap, HttpServletRequest request) throws IOException {
         Locale locale = localeResolver.resolveLocale(request);
         String language = locale.getLanguage();
         log.debug("Language from cookie: {}", language);
@@ -74,7 +72,7 @@ public class PostController extends BaseController {
             Translation translationForLanguage = translationExists(language, translation.getTranslationGroup().getTranslations());
             if (translationForLanguage != null) {
                 AbstractPost translatedPost = postRepository.findOneByTranslation(translationForLanguage);
-                return "redirect:/" + URLEncoder.encode(translatedPost.getName(), "UTF-8");
+                return REDIRECT + URLEncoder.encode(translatedPost.getName(), CharEncoding.UTF_8);
             }
         }
 
@@ -83,21 +81,26 @@ public class PostController extends BaseController {
         if (post instanceof QlPage) {
             // handle page
             String content = post.getContent();
-            if (content.equals("[contact-form]")) {
-                modelMap.addAttribute("view", "client/contacts");
-            } else if (content.equals("[not-found-page]")) {
-                QlConfig contactPageIdConfig = qlConfigRepository.findOneByKey("contact-page-id");
-                if (contactPageIdConfig == null) {
-                    throw new RuntimeException("Contact Page configuration expected");
-                }
-                AbstractPost contactPage = retrievePage(language, contactPageIdConfig.getValue());
-                modelMap.addAttribute("contactPageName", contactPage.getName());
-                modelMap.addAttribute("view", "client/page-not-found");
-            } else if (content.equals("[forgot-password-page]")) {
-                modelMap.addAttribute("view", "client/forgot-password");
-            } else {
-                modelMap.addAttribute("content", content);
-                modelMap.addAttribute("view", "client/post");
+            switch (content) {
+                case "[contact-form]":
+                    modelMap.addAttribute("view", "client/contacts");
+                    break;
+                case "[not-found-page]":
+                    QlConfig contactPageIdConfig = qlConfigRepository.findOneByKey("contact-page-id");
+                    if (contactPageIdConfig == null) {
+                        throw new MissingConfigurationException("Contact Page configuration expected");
+                    }
+                    AbstractPost contactPage = retrievePage(language, contactPageIdConfig.getValue());
+                    modelMap.addAttribute("contactPageName", contactPage.getName());
+                    modelMap.addAttribute("view", "client/page-not-found");
+                    break;
+                case "[forgot-password-page]":
+                    modelMap.addAttribute("view", "client/forgot-password");
+                    break;
+                default:
+                    modelMap.addAttribute("content", content);
+                    modelMap.addAttribute("view", "client/post");
+                    break;
             }
         } else if (post instanceof DlListing) {
             // handle listing
@@ -111,7 +114,6 @@ public class PostController extends BaseController {
     public String showPage(@PathVariable String name,
                            @PathVariable String secondName,
                            final ModelMap modelMap, HttpServletRequest request,
-                           HttpServletResponse response,
                            @RequestParam Map<String, String> allRequestParams) throws IOException {
         Locale locale = localeResolver.resolveLocale(request);
         String language = locale.getLanguage();
@@ -134,8 +136,8 @@ public class PostController extends BaseController {
                 AbstractPost translatedPost = postRepository.findOneByTranslation(translationForLanguage);
                 String firstPart = translatedPost.getName().split("/")[0];
                 String secondPart = translatedPost.getName().split("/")[1];
-                return "redirect:/" + URLEncoder.encode(firstPart, "UTF-8") + "/"
-                        + URLEncoder.encode(secondPart, "UTF-8");
+                return REDIRECT + URLEncoder.encode(firstPart, CharEncoding.UTF_8) + "/"
+                        + URLEncoder.encode(secondPart, CharEncoding.UTF_8);
             }
         }
 
@@ -144,52 +146,74 @@ public class PostController extends BaseController {
         if (post instanceof QlPage) {
             // handle page
             String content = post.getContent();
-            if (content.equals("[activation-link-page]")) {
-                String key = allRequestParams.get("key");
-                if (key == null) {
-                    return redirectToPageNotFound();
-                } else {
-                    Optional<User> activatedUser = userService.activateRegistration(key);
-                    if (activatedUser.isPresent()) {
-                        modelMap.addAttribute("view", "client/account/activation");
-                    } else {
-                        return redirectToPageNotFound();
-                    }
-                }
-            } else if (content.equals("[reset-password-finish-page]")) {
-                String key = allRequestParams.get("key");
-                if (key == null) {
-                    return redirectToPageNotFound();
-                } else {
-                    Optional<User> oneByResetKey = userRepository.findOneByResetKey(key);
-                    if (!oneByResetKey.isPresent()) {
-                        return redirectToPageNotFound();
-                    }
-                    modelMap.addAttribute("user", new User());
-                    modelMap.addAttribute("view", "client/account/password-reset-finish");
-                }
-            } else if (content.equals("[profile-page]")) {
-                String currentUserLogin = SecurityUtils.getCurrentUserLogin();
-                Optional<User> oneByLogin = userRepository.findOneByLogin(currentUserLogin);
-                if (oneByLogin.isPresent()) {
-                    modelMap.addAttribute("user", oneByLogin.get());
-                    modelMap.addAttribute("view", "client/account/profile");
-                } else {
-                    redirectToPageNotFound();
-                }
+            switch (content) {
+                case "[activation-link-page]":
+                    if (handleActivationLinkPage(modelMap, allRequestParams)) return redirectToPageNotFound();
+                    break;
+                case "[reset-password-finish-page]":
+                    if (handleResetPasswordFinishPage(modelMap, allRequestParams)) return redirectToPageNotFound();
+                    break;
+                case "[profile-page]":
+                    handleProfilePage(modelMap);
+                    break;
+                default:
+                    modelMap.addAttribute("content", content);
+                    modelMap.addAttribute("view", "client/post");
+                    break;
             }
         }
 
         return "client/index";
     }
 
+    private void handleProfilePage(ModelMap modelMap) throws UnsupportedEncodingException {
+        String currentUserLogin = SecurityUtils.getCurrentUserLogin();
+        Optional<User> oneByLogin = userRepository.findOneByLogin(currentUserLogin);
+        if (oneByLogin.isPresent()) {
+            modelMap.addAttribute("user", oneByLogin.get());
+            modelMap.addAttribute("view", "client/account/profile");
+        } else {
+            redirectToPageNotFound();
+        }
+    }
+
+    private boolean handleResetPasswordFinishPage(ModelMap modelMap, @RequestParam Map<String, String> allRequestParams) {
+        String key = allRequestParams.get("key");
+        if (key == null) {
+            return true;
+        } else {
+            Optional<User> oneByResetKey = userRepository.findOneByResetKey(key);
+            if (!oneByResetKey.isPresent()) {
+                return true;
+            }
+            modelMap.addAttribute("user", new User());
+            modelMap.addAttribute("view", "client/account/password-reset-finish");
+        }
+        return false;
+    }
+
+    private boolean handleActivationLinkPage(ModelMap modelMap, @RequestParam Map<String, String> allRequestParams) {
+        String key = allRequestParams.get("key");
+        if (key == null) {
+            return true;
+        } else {
+            Optional<User> activatedUser = userService.activateRegistration(key);
+            if (activatedUser.isPresent()) {
+                modelMap.addAttribute("view", "client/account/activation");
+            } else {
+                return true;
+            }
+        }
+        return false;
+    }
+
     private String redirectToPageNotFound() throws UnsupportedEncodingException {
         QlConfig notFoundPageConfig = qlConfigRepository.findOneByKey("not-found-page-id");
         if (notFoundPageConfig == null) {
-            throw new RuntimeException("Not Found Page configuration expected");
+            throw new MissingConfigurationException("Not Found Page configuration expected");
         }
         AbstractPost notFoundPage = postRepository.findOne(Long.valueOf(notFoundPageConfig.getValue()));
-        return "redirect:/" + URLEncoder.encode(notFoundPage.getName(), "UTF-8");
+        return REDIRECT + URLEncoder.encode(notFoundPage.getName(), "UTF-8");
     }
 
 
